<resources>
    <!-- Main Activity Strings -->
    <string name="app_name">Capstone_Project</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="create_account">Student Account</string>

    <!-- Create Account Strings -->
    <string name="formHeader">STUDENT ACCOUNT FORMS</string>
    <string name="PrivacyNoticeHeader">Privacy Notice</string>
    <string name="nameHeader"> Name:</string>
    <string name="nameExample">(e.g. Lastname, Firstname Middle inital.)</string>
    <string name="studentEmail">Email:</string>
    <string name="studentnumberHeader">Student Number:</string>
    <string name="courseHeader">Program/Yearlevel:</string>
    <string name="qrheader">ACCOUNT QR CODE</string>
    <string name="download">Save to gallery</string>
    <string name="accountinfo">ACCOUNT INFORMATION</string>
    <string name="PrivacyNoticeBody">
        The information you provide will be used exclusively to enhance the success of the organization\'s future events.
        This data will help us improve planning, communication, and event experiences. Your information will not be shared with third parties or used for any unrelated purposes.
        We are committed to protecting your privacy and ensuring your data is handled responsibly.
    </string>

    <!-- Dashboard Strings -->
    <string name="dashboard_eventStartDate">Starts in : </string>
    <string name="dashboard_eventEndDate">Ends in : </string>
    <string name="add_event">Add Event</string>
    <string name="upcoming_events">UPCOMING EVENTS</string>
    <string name="list_of_events">LIST OF EVENTS</string>

    <!--  Verify Attendee Strings  -->
    <string name="waiting_for_scan">WAITING FOR SCAN</string>
    <string name="status">Status:</string>
    <string name="type_of_admission">Type of\nAdmission:</string>
    <string name="name">Name:</string>
    <string name="attendant_details">Attendee Details:</string>
    <string name="attendant_verification">Attendee Verification</string>
    <string name="attendant_verification_tip">
        Scan the attendee’s QR code by placing the
        QR code within the viewfinder</string>
    <string name="attendee_verified">ATTENDEE IN EVENT</string>
    <string name="attendee_verifail">NOT IN EVENT</string>

    <!-- Event Forms strings-->
    <string name="eventFormsHeader">CREATE EVENT FORMS</string>
    <string name="eventName">Event Name:</string>
    <string name="eventDescription">Desciption:</string>
    <string name="eventVenue">Venue :</string>
    <string name="eventStartDateHeader">Start Date :</string>
    <string name="eventEndDate">End Date :</string>
    <string name="eventAudienceLimit">Limit :</string>
    <string name="eventTimeStart">Time Start :</string>
    <string name="eventTimeEnd">Time End :</string>
    <string name="eventCreate">Create Event</string>
    <string name="eventTicket">Ticket Price :</string>
    <string name="tba">TBA</string>
    <string name="attendee_placeholder">Attendee</string>
    <string name="confirmEdit">CONFIRM EDIT</string>
    <string name="attendee_registered">ATTENDEE REGISTERED</string>
    <string name="attendee_register_error">ALREADY IN EVENT</string>
    <!-- Event List strings-->
    <string name="registered_events">Registered Events</string>
</resources>

