<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/studentnumber"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peachwhite"
    tools:context=".CreateAccount">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formHeader"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameExample"
        android:textColor="@color/black"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" (e.g. BSCS, BSIT)"
        android:textColor="@color/black"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="63dp"
        android:layout_height="22dp"
        android:text="@string/nameHeader"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="343dp"
        android:layout_height="143dp"
        android:layout_marginStart="24dp"

        android:text="@string/PrivacyNoticeBody"

        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputStudentNumber2"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/inputfield_outline"
        android:hint="School Number"
        android:paddingLeft="10dp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:text="@string/studentnumberHeader"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="67dp"
        android:layout_height="21dp"
        android:text="@string/courseHeader"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:text="@string/studentEmail"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputStudentNumber"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/inputfield_outline"
        android:hint="School Email:"
        android:paddingLeft="10dp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputStudentNumber3"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/inputfield_outline"
        android:hint="Course"
        android:paddingLeft="10dp"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/inputfield_outline"
        android:hint="Name"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/PrivacyNoticeHeader"
        android:textColor="@color/black"
        android:textSize="18sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/QRCodeCreateActivity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/green_button"
        android:text="Create Account"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/yellow"
        android:onClick="createQRCodeActivity"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputStudentNumber3"
        app:layout_constraintVertical_bias="0.704"  />


</androidx.constraintlayout.widget.ConstraintLayout>